# SphagnumDB

./: AUTHORS.md  Cargo.toml  LICENSE  README.md  add_license.sh  rustfmt.toml
.github/workflows/: ci.yml  greetings.yml
src/: lib.rs  main.rs
src/core/: data_storage.rs  mod.rs  passport.rs  req_resp_codec.rs  sphagnum.rs  sphagnum_behaviour.rs  sprout.rs  sprout_behaviour.rs
src/core/commands/: generic.rs  mod.rs  string.rs
src/core/data_types/: data_type.rs  mod.rs  set.rs  string.rs
src/core/data_types/tests/: string.rs
src/sprout/: data_storage.rs  mod.rs  passport.rs  sprout.rs
tests/: cluster_operations.rs
