[package]
name = "sproutdb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "sproutdb"
path = "src/lib.rs"

# Please note that there may be unnecessary dependencies in this list due to the rapidly developing project.
[dependencies]
libp2p = { version = "0.55", features = ["identify", "noise", "ping", "tcp", "tokio", "yamux", "request-response", "kad", "json"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
libp2p-swarm-derive = "0.35.0"
clap = {version = "4.5.32", features = ["derive"] }
rand = "0.8"
